# serializer version: 1
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_none_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_valve',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_none_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 None',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_none_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
